// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardDelete renders correctly 1`] = `
<setContext
  buttonText="Button text"
  confirm={Object {}}
  disabled={false}
  onSubmit={[MockFunction]}
  setUI={
    Object {
      "dialog": null,
    }
  }
  text="This is a test"
>
  <setContext
    buttonText="Button text"
    confirm={Object {}}
    disabled={false}
    onSubmit={[MockFunction]}
    setUI={
      Object {
        "dialog": null,
      }
    }
    text="This is a test"
  >
    <CardDelete
      buttonText="Button text"
      confirm={Object {}}
      disabled={false}
      onSubmit={[MockFunction]}
      setUI={
        Object {
          "dialog": null,
        }
      }
      text="This is a test"
    >
      <CardForm
        button={
          Object {
            "onClick": [Function],
            "save": true,
            "style": "red",
            "text": "Button text",
          }
        }
        className="delete"
        disable={false}
        id="delete"
      >
        <Card
          className="delete"
          footer={
            <Row
              className="footer"
            >
              <Button
                arrow="arrow_darkBg"
                disabled={false}
                onClick={[Function]}
                style="red"
                submit={true}
              >
                Button text
              </Button>
            </Row>
          }
          id="delete"
        >
          <Box
            className="card delete"
            id="delete"
            justify="space-between"
          >
            <Flex
              className="card delete"
              flow="box"
              id="delete"
              justify="space-between"
            >
              <div
                className="flex box space-between card delete"
                id="delete"
              >
                <main
                  className="full"
                >
                  <div
                    className="formContent"
                  >
                    <p>
                      Child
                    </p>
                  </div>
                </main>
                <footer>
                  <Row
                    className="footer"
                  >
                    <Flex
                      className="footer"
                      flow="row"
                    >
                      <div
                        className="flex row undefined footer"
                      >
                        <Button
                          arrow="arrow_darkBg"
                          disabled={false}
                          onClick={[Function]}
                          style="red"
                          submit={true}
                        >
                          <Link>
                            <A
                              className="link"
                            >
                              <a
                                className="link"
                              >
                                <button
                                  className="button red"
                                  disabled={false}
                                  onClick={[Function]}
                                  type="submit"
                                >
                                  Button text
                                </button>
                              </a>
                            </A>
                          </Link>
                        </Button>
                      </div>
                    </Flex>
                  </Row>
                </footer>
              </div>
            </Flex>
          </Box>
        </Card>
      </CardForm>
    </CardDelete>
  </setContext>
</setContext>
`;

exports[`CardDelete renders correctly 2`] = `
<CardForm
  button={
    Object {
      "onClick": [Function],
      "save": true,
      "style": "red",
      "text": "Button text",
    }
  }
  className="delete"
  disable={false}
  id="delete"
>
  <Card
    className="delete"
    footer={
      <Row
        className="footer"
      >
        <Button
          arrow="arrow_darkBg"
          disabled={false}
          onClick={[Function]}
          style="red"
          submit={true}
        >
          Button text
        </Button>
      </Row>
    }
    id="delete"
  >
    <Box
      className="card delete"
      id="delete"
      justify="space-between"
    >
      <Flex
        className="card delete"
        flow="box"
        id="delete"
        justify="space-between"
      >
        <div
          className="flex box space-between card delete"
          id="delete"
        >
          <main
            className="full"
          >
            <div
              className="formContent"
            >
              <p>
                Child
              </p>
            </div>
          </main>
          <footer>
            <Row
              className="footer"
            >
              <Flex
                className="footer"
                flow="row"
              >
                <div
                  className="flex row undefined footer"
                >
                  <Button
                    arrow="arrow_darkBg"
                    disabled={false}
                    onClick={[Function]}
                    style="red"
                    submit={true}
                  >
                    <Link>
                      <A
                        className="link"
                      >
                        <a
                          className="link"
                        >
                          <button
                            className="button red"
                            disabled={false}
                            onClick={[Function]}
                            type="submit"
                          >
                            Button text
                          </button>
                        </a>
                      </A>
                    </Link>
                  </Button>
                </div>
              </Flex>
            </Row>
          </footer>
        </div>
      </Flex>
    </Box>
  </Card>
</CardForm>
`;
